[metadata]
url = https://github.com/koromodako/datashark-processors-windows
author = koromodako
author_email = koromodako@gmail.com
name = datashark-processors-windows
description = Datashark Windows Forensics Processors
long_description = file: README.md, LICENSE
keywords = datashark, processors, windows
classifiers =
    Development Status :: 4 - Beta
    Framework :: Datashark
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
    Topic :: Utilities

[options]
packages = find:
install_requires =
    datashark-core

[options.entry_points]
datashark_processors =
    amcacheparser = datashark_processors_windows.amcacheparser:AmCacheParserProcessor
    pecmd = datashark_processors_windows.pecmd:PECmdProcessor
    recentfilecacheparser = datashark_processors_windows.recentfilecacheparser:RecentFileCacheParserProcessor
    appcompatcacheparser = datashark_processors_windows.appcompatcacheparser:AppCompatCacheParserProcessor
    jlecmd = datashark_processors_windows.jlecmd:JLECmdProcessor
    sumecmd = datashark_processors_windows.sumecmd:SumECmdProcessor
    wxtcmd = datashark_processors_windows.wxtcmd:WxTCmdProcessor
    srumecmd = datashark_processors_windows.srumecmd:SrumECmdProcessor
    mftecmd = datashark_processors_windows.mftecmd:MFTECmdProcessor
